Fixes clipping of site titles in site overview

--- a/src/_scss/layout/_overview.scss
+++ b/src/_scss/layout/_overview.scss
@@ -363,6 +363,7 @@ div.main {
                                         display: block;
                                         overflow: hidden;
                                         text-overflow: ellipsis;
+                                        line-height: 1.1em;
 
                                         &.title .point {
                                             margin-right: 0.5em;
